--- a/KretaRazorPages/Resources/Pages/IndexModel.en.resx
+++ b/KretaRazorPages/Resources/Pages/IndexModel.en.resx
@@ -117,13 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="APIHost" xml:space="preserve">
-    <value>kreta.azurewebsites.net</value>
-  </data>
-  <data name="APIScheme" xml:space="preserve">
-    <value>https</value>
-  </data>
-  <data name="CultureInfo" xml:space="preserve">
-    <value>hu-HU</value>
+  <data name="Welcome" xml:space="preserve">
+    <value>Welcome</value>
   </data>
 </root>
