--- a/ApplicationProperties/Properties/Resources.resx
+++ b/ApplicationProperties/Properties/Resources.resx
@@ -126,4 +126,7 @@
   <data name="CultureInfo" xml:space="preserve">
     <value>hu-HU</value>
   </data>
+  <data name="GetPossibleNumberOfRowOnTheDataGridTable" xml:space="preserve">
+    <value>10,20,30</value>
+  </data>
 </root>
