--- a/ApplicationProperties/Properties/Resources.resx
+++ b/ApplicationProperties/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="APIHost" xml:space="preserve">
-    <value>kreta.azurewebsites.net</value>
+    <value>localhost</value>
+  </data>
+  <data name="APIPort" xml:space="preserve">
+    <value>5000</value>
   </data>
   <data name="APIScheme" xml:space="preserve">
-    <value>https</value>
+    <value>http</value>
   </data>
   <data name="CultureInfo" xml:space="preserve">
     <value>hu-HU</value>
