--- a/ApplicationProperties/Properties/Resources.resx
+++ b/ApplicationProperties/Properties/Resources.resx
@@ -132,4 +132,7 @@
   <data name="GetPossibleNumberOfRowOnTheDataGridTable" xml:space="preserve">
     <value>10,20,30</value>
   </data>
+  <data name="SupportedCulture" xml:space="preserve">
+    <value>en-En,hu-Hu</value>
+  </data>
 </root>
