Nyelv csere működik

--- a/ApplicationProperties/Properties/Resources.resx
+++ b/ApplicationProperties/Properties/Resources.resx
@@ -127,7 +127,7 @@
     <value>http</value>
   </data>
   <data name="CultureInfo" xml:space="preserve">
-    <value>en-En</value>
+    <value>hu-Hu</value>
   </data>
   <data name="GetPossibleNumberOfRowOnTheDataGridTable" xml:space="preserve">
     <value>10,20,30</value>
