--- a/KretaRazorPages/Resources/Pages/IndexModel.hu.resx
+++ b/KretaRazorPages/Resources/Pages/IndexModel.hu.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Title" xml:space="preserve">
+    <value>Kréta - iskolai adminisztráció</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
-    <value>Üdvözöljük</value>
+    <value>Üdvözölöm</value>
   </data>
 </root>
